First checkin of separate component manual.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@5 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Monitor_Optimizer.tex
+++ b/trunk/Monitor_Optimizer.tex
@@ -1,6 +1,6 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\subsection{Monitor\_Optimizer: Optimization locations for the
+\section{Monitor\_Optimizer: Optimization locations for the
   Sour\-ce\_Op\-ti\-miz\-er component}
 \label{s:monitoroptimizer}
 
