--- a/trunk/chopper.tex
+++ b/trunk/chopper.tex
@@ -1,11 +1,11 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\section{Chopper-like components}
+\chapter{Chopper-like components}
 
 In this section, we will present rotating components such as 
 chopppers, velocity selectors, {\em etc.}
 
-\subsection{V\_selector: The rotating velocity selector}
+\section{V\_selector: The rotating velocity selector}
 
 The component {\bf V\_selector} models a rotating velocity
 selector constructed from a number of collimator blades
@@ -66,7 +66,7 @@ and the number of blades, $N$.
 
 The local coordinate system is centered at the slit centre.
 
-\subsection{Chopper: The disc chopper}
+\section{Chopper: The disc chopper}
 \label{s:chopper}
 
 This component was contributed by Philipp Bernhardt, Lehrstuhl f\"ur
@@ -107,7 +107,7 @@ angular frequency $f$. The sign of $f$ defines the direction of rotation, as
 can be seen in figure~\ref{f:chopper1}.
 
 
-\subsection{First\_chopper: The first disc chopper}
+\section{First\_chopper: The first disc chopper}
 \label{s:first_chopper}
 
 This component was contributed by Philipp Bernhardt, Lehrstuhl f\"ur
