--- a/trunk/inelastic.tex
+++ b/trunk/inelastic.tex
@@ -1,6 +1,6 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\section{Inelastic scattering kernels}
+\chapter{Inelastic scattering kernels}
 \label{s:inelastic}
 
 In this section, samples with inelastic scattering are
@@ -8,7 +8,7 @@ described. Currently, only a single sample is available that scatters
 uniformly in $({\bf Q}, \omega)$ and is used for computing resolution
 functions in tripple-axis instruments.
 
-\subsection{Res\_sample: A uniform scatterer for resolution calculation}
+\section{Res\_sample: A uniform scatterer for resolution calculation}
 \label{s:res_sample}
 
 The component \textbf{Res\_sample} models an inelastic sample that
@@ -87,7 +87,7 @@ meters. The only output parameter is \textit{res\_struct} containing
 information about the scattering event, with all vectors given in the
 local coordinate system of the component in units of meter.
 
-\subsubsection{Background}
+\subsection{Background}
 
 In an experiment, as well as in the simulation, the expected intensity
 is by definition of the resolution function given by
