--- a/trunk/monochr.tex
+++ b/trunk/monochr.tex
@@ -1,6 +1,6 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\section{Bragg scattering single crystals, monochromators}
+\chapter{Bragg scattering single crystals, monochromators}
 
 In this class of components, we are concerned with elastic Bragg
 scattering from single crystals. The Mosaic\_anisotropic component
@@ -17,7 +17,3 @@ also allows anisotropic mosaic and $\Delta d/d$ lattice space variation.
 \input{Mosaic_simple.tex}
 \input{Mosaic_anisotropic.tex}
 \input{Single_crystal.tex}
-
-\subsection{Monochromator: The monochromator crystal}
-The component {\bf Monochromator} is obsolete as from McStas version
-1.2. Use the component {\bf Mosaic\_anisotropic} instead.
