--- a/trunk/Monitor_nD.tex
+++ b/trunk/Monitor_nD.tex
@@ -1,4 +1,4 @@
-\subsection{Monitor\_nD: A general Monitor for 0D/1D/2D records}
+\section{Monitor\_nD: A general Monitor for 0D/1D/2D records}
 \label{s:monitornd}
 
 This component was contributed by Emmanuel Farhi, Institute
