--- a/trunk/source.tex
+++ b/trunk/source.tex
@@ -1,6 +1,6 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\section{Source components}
+\chapter{Source components}
 The main function of the source components is to determine a set of initial
 parameters $({\bf r}, {\bf v})$, or equivalent (${\bf r}, v, \Ombold $),
 for each neutron. This is done by Monte Carlo choices. 
@@ -8,59 +8,79 @@ In the current sources no polarization dependence is implemented,
 whence we let ${\bf s}=(0,0)$.
 
 The sources to be presented in the following all make their Monte Carlo
-choices on the basis of simple analytical expressions ({\em e.g.} the
-energy distribution). 
-More realistic sources would require that (at least) the Monte-Carlo choice
-for the initial energy was made on basis of a measured,
-tabulated energy spectrum.
-This is planned to be implemented in a later version of \MCS .
+choices for initial position and direction on the basis of a 
+uniform distribution, with the exception of Souce\_Div, where the 
+distribution of initial divergence (deviation between the nominal and
+actual direction) is Gaussian. The choice of energy distribution
+varies from a flat distribution in Source\_flat, over a single
+Maxwellian distribution in Source\_Maxwell, to the more realistic
+weighted sum of three Maxwellians in Source\_Maxwell3.
+As neutron energy is in principle unlimited, all sources require
+energy/wavelength windows to be specified.
 
-\subsection{Source\_flat: A circular continuous source with a flat energy spectrum}
+For time-of-flight sources, the initial neutron time, $t$ (in s), is
+an essential parameter. The choice of this is being made on basis of
+detailed analytical expressions, see the respective components. 
+For other sources, the initial neutron time is set to zero.
+
+The flux of the sources deserves special attention. The total flux is defined
+as the sum of weights of all emitted neutron rays during one simulation 
+(the unit of weight is thus neutrons per second), if all neutron energies
+were allowed. In most sources, the total flux is a required parameter.
+For the simple sources Source\_flat and Source\_flat\_lambda (mostly used
+for test purposes), the flux may be omitted. In this case 
+each neutron ray carries a weight of unity (SHOULD WE DO THIS?? 
+NOT IMPLEMENTED BELOW!)
+
+\section{Source\_flat: A circular continuous source with a flat energy spectrum}
 \label{sourceaim}
-This component {\bf Source\_flat} is 
-a simple continous source with a flat energy distribution.
-The time-of-flight aspect is not relevant for this component,
-so we put $t=0$ for all neutrons.
+\component{Source\_flat}{System}{ $r_{\rm s}$, $z_{\rm f}$, $w$, $h$, $E_0$, $\Delta E$}{None}
 
-The initial neutron position is chosen randomly from within a
+This component is 
+a simple continuous source with a energy distribution which is uniform
+in the range $E_0 - \Delta E$ to $E_0 + \Delta E$.
+The component is not used for time-of-flight simulations,
+so we put $t=0$ for all neutron rays.
+
+The initial neutron ray position is chosen randomly from within a
 circle of radius $r_{\rm s}$ in the $z=0$ plane. 
-This is a fair approximation
-of a cylindrical cold source with the beam going out along
-the cylinder axis, like the one at Ris\o .
+This geometry is a fair approximation
+of a cylindrical cold/thermal source with the beam going out along
+the cylinder axis.
 
-The initial neutron velocity direction is focused within
+The initial neutron ray direction is focused within
 a solid angle, defined by a rectangular target of width
 $w$, height $h$, parallel to 
 the $xy$ plane placed at $(0,0,z_{\rm f})$. 
 A small angle approximation is used, assuming that 
-$w,h \ll z_{\rm f}$.
+$w,h \ll z_{\rm f}$. (IS THIS STILL RIGHT? CHECK THIS!)
 
-The weight multiplier of the created neutron, $\pi_1$, is set to the
+The initial weight of the created neutron ray, $\pi_1$, is set to the
 solid angle of the focusing opening divided by $4\pi$,
-see discussion in \ref{s:focus}
-
-The input parameters of {\bf Source\_flat} are the source radius, $r_{\rm s}$,
-the distance to the target, $z_{\rm f}$, 
-the dimensions of the target, $w$ and $h$, and
-the centre and spread of the energy distribution, $E_0$ and $\Delta E$.
+see discussion in \ref{s:focus}. (SHOULD WE HAVE THE FOCUS CHAPTER ALSO
+IN THE COMPONENT MANUAL?)
 
 
-\subsection{Source\_flat\_lambda: A continous source with flat
+\section{Source\_flat\_lambda: A continuous source with flat
   wavelength spectrum}
+
+\component{Source\_flat\_lambda}{System}{ \textit{radius, dist, xw, yh, lambda\_0, d\_lambda}}{None}
 
 The component {\bf Source\_flat\_lambda} is similar to the Source\_flat
 component, except that the spectrum is flat in wavelength, rather
 than in energy.
 
 The input parameters for Source\_flat\_lambda are \textit{radius} to set
-the source radius in meters; \textit{dist}, \textit{xw}, and \textit{yh}
+the source radius; \textit{dist}, \textit{xw}, and \textit{yh}
 to set the focusing as for Source\_flat; and \textit{lambda\_0} and
 \textit{d\_lambda} to set the range of wavelength emitted (the range
 will be from $\textit{lambda\_0} - \textit{d\_lambda}$ to
 $\textit{lambda\_0} + \textit{d\_lambda}$).
 
+IN GENERAL: HOW DO WE HANDLE MATH SYMBOLS IN THE COMPONENT DESCIPTIONS? THE 
+FIRST TWO COMPONENT DESCRIPTIONS ARE WIDELY DIFFERENT!
 
-\subsection{Source\_flux\_lambda: A continuous source with absolute
+\section{Source\_flux\_lambda: A continuous source with absolute
   flux}
 \label{Source_flux_lambda}
 
@@ -97,7 +117,7 @@ $\textit{lambda\_0} + \textit{d\_lambda}$); and \textit{flux} to set the
 source flux in units of ${\rm cm}^{-2} {\rm st}^{-1} \textit{\AA}$.
 
 
-\subsection{Source\_div: A divergent source}
+\section{Source\_div: A divergent source}
 
 {\bf Source\_div} is a rectangular source which emits a
 beam of a certain divergence around the main exit direction
@@ -116,7 +136,7 @@ and the mean energy $E_0$ and the energy spread $dE$ (both in meV).
 The neutron energy range is $(E_0-dE; E_0+dE)$. 
 
 
-\subsection{Moderator: A time-of-flight source}
+\section{Moderator: A time-of-flight source}
 The simple time-of-flight source component {\bf Moderator} resembles
 the source component {\bf Source\_flat} described in \ref{sourceaim}.
 Like {\bf Source\_flat}, {\bf Moderator} is circular and focuses
