Corrected wrong path to various figures
git-svn-id: https://svn.mccode.org/svn/McStasTeX@6 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/test.tex
+++ b/trunk/test.tex
@@ -20,7 +20,7 @@ of attenuation of the beam in the cylindrical sample.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.6\textwidth]{vanadium-surf-2.eps}
+    \includegraphics[width=0.6\textwidth]{figures/vanadium-surf-2.eps}
   \end{center}
 \caption{Scattering from a V-sample, measured by a spherical
   PSD. The sphere has been transformed onto a plane and the intensity is
@@ -59,7 +59,7 @@ are well reproduced by the \MCS\ simulations.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.6\textwidth]{tas1-2T.eps}
+    \includegraphics[width=0.6\textwidth]{figures/tas1-2T.eps}
   \end{center}
 \caption{Scans of $2\theta_s$ in the direct beam with 1 mm slit on the
   sample position.
@@ -82,7 +82,7 @@ see Figure~\ref{f:v_2ta_zero}.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.6\textwidth]{vanadium-plot-1.eps}
+    \includegraphics[width=0.6\textwidth]{figures/vanadium-plot-1.eps}
   \end{center}
 \caption{First simulated $2\theta_a$ scan on a vanadium sample.
 Collimations: open-30'-28'-open.}
@@ -91,7 +91,7 @@ Collimations: open-30'-28'-open.}
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.6\textwidth]{vanadium-plot-2.eps}
+    \includegraphics[width=0.6\textwidth]{figures/vanadium-plot-2.eps}
   \end{center}
 \caption{Corrected $2\theta_a$ scan on a V-sample.
 Collimations: open-30'-28'-67'.
@@ -107,7 +107,7 @@ the agreement between simulation and experiment is excellent.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.6\textwidth]{al2o3-focus.eps}
+    \includegraphics[width=0.6\textwidth]{figures/al2o3-focus.eps}
   \end{center}
 \caption{$2\theta_s$ scans on Al$_2$O$_3$ in two-axis, focusing mode.
 Collimations: open-30'-28'-67'.
@@ -122,7 +122,7 @@ The data are shown in Figure \ref{f:v_ea}.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.6\textwidth]{ea-scan.eps}
+    \includegraphics[width=0.6\textwidth]{figures/ea-scan.eps}
   \end{center}
 \caption{Scans of the analyser energy on a V-sample.
 Collimations: open-30'-28'-67'.
@@ -144,7 +144,7 @@ time.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.6\textwidth]{prisma2-a.eps}
+    \includegraphics[width=0.6\textwidth]{figures/prisma2-a.eps}
   \end{center}
 \caption{Test result from PRISMA instrument using ``coloured
   neutrons''. Each graph shows the neutrons scattered from one analyser blade.}
