Set up manual.tex for separate component manual in Component_manual.tex
git-svn-id: https://svn.mccode.org/svn/McStasTeX@7 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -74,8 +74,8 @@
 \include{running}
 \include{kernel}
 \include{techniq}
-\include{comp}
-%\include{comp_removed}
+%\include{comp}
+\include{comp_removed}
 \include{instrum}
 %\include{future}
 
