Inserted test comment in manual.tex
git-svn-id: https://svn.mccode.org/svn/McStasTeX@8 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -1,4 +1,5 @@
 \documentclass[twoside,notitlepage,11pt]{report}
+%here is a meaingless comment
 %\usepackage{a4paper}
 \usepackage{graphicx}
 \usepackage{psfrag}
