Final commitlog test?
git-svn-id: https://svn.mccode.org/svn/McStasTeX@10 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -1,4 +1,5 @@
 \documentclass[twoside,notitlepage,11pt]{report}
+% Here's a comment again - probably no more testing...
 %\usepackage{a4paper}
 \usepackage{graphicx}
 \usepackage{psfrag}
