--- a/trunk/intro_comp.tex
+++ b/trunk/intro_comp.tex
@@ -200,7 +200,7 @@ The \MCS\ system consists of the following major parts:
 An explanation of \MCS\ terminology can be
 found in appendix~\ref{s:terminology}, and a list of library calls 
 that may be used in
-component definitions appears in appendix~\ref{kernelcalls}.
+component definitions appears in appendix~\ref{c:kernelcalls}.
 
 Plans for future extensions are presented 
 on the \MCS\ web-page~\cite{mcstas_webpage}.
