--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -1,7 +1,7 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \chapter{Kernel calls and conversion constants}
-\label{kernelcalls}
+\label{c:kernelcalls}
 The \MCS\ kernel contains a number of built-in functions
 and conversion constants which are useful when constructing
 components. Here, we present a short list of these features.
