--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -74,4 +74,29 @@
    note      = {See http://www.neutron.anl.gov/nexus/}
 }
 
+@misc{dev_cpp_webpage,
+  note       = {See http://www.bloodshed.net/devcpp.html}
+}
+
+@misc{active_state_webpage,
+  note       = {See http://www.activestate.com}
+}
+
+@misc{nisp_webpage,
+  note       = {See http://strider.lansce.lanl.gov/NISP/Welcome.html}
+}
+
+@misc{sns_webpage,
+  note       = {See http://www.sns.gov/}
+}
+
+@misc{scilab_webpage,
+  note       = {See http://www-rocq.inria.fr/scilab/}
+}
+
+@misc{vitess_webpage,
+  note       = {See http://www.hmi.de/projects/ess/vitess/}
+}
+
+
 
